@@ -2,13 +2,8 @@ package mcjty.lostcities.worldgen.lost.regassets;
 
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
-import mcjty.lostcities.worldgen.lost.regassets.data.PredefinedBuilding;
-import mcjty.lostcities.worldgen.lost.regassets.data.PredefinedStreet;
 import net.minecraft.resources.ResourceLocation;
 import org.jetbrains.annotations.Nullable;
-
-import java.util.List;
-import java.util.Optional;
 
 public class PredefinedSphereRE implements IAsset<PredefinedSphereRE> {
 
@@ -19,8 +14,7 @@ public class PredefinedSphereRE implements IAsset<PredefinedSphereRE> {
                     Codec.INT.fieldOf("chunkz").forGetter(l -> l.chunkZ),
                     Codec.INT.fieldOf("centerx").forGetter(l -> l.centerX),
                     Codec.INT.fieldOf("centerz").forGetter(l -> l.centerZ),
-                    Codec.INT.fieldOf("radius").forGetter(l -> l.radius),
-                    Codec.STRING.fieldOf("biome").forGetter(l -> l.biome)
+                    Codec.INT.fieldOf("radius").forGetter(l -> l.radius)
             ).apply(instance, PredefinedSphereRE::new));
 
     private ResourceLocation name;
@@ -31,19 +25,16 @@ public class PredefinedSphereRE implements IAsset<PredefinedSphereRE> {
     private final int centerX;
     private final int centerZ;
     private final int radius;
-    private String biome;
 
     public PredefinedSphereRE(
             String dimension,
-            int chunkX, int chunkZ, int centerX, int centerZ, int radius,
-            String biome) {
+            int chunkX, int chunkZ, int centerX, int centerZ, int radius) {
         this.dimension = dimension;
         this.chunkX = chunkX;
         this.chunkZ = chunkZ;
         this.centerX = centerX;
         this.centerZ = centerZ;
         this.radius = radius;
-        this.biome = biome;
     }
 
     public String getDimension() {
@@ -68,10 +59,6 @@ public class PredefinedSphereRE implements IAsset<PredefinedSphereRE> {
 
     public int getRadius() {
         return radius;
-    }
-
-    public String getBiome() {
-        return biome;
     }
 
     @Override
